--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
+/* body{
+  margin-bottom: 10px;
+  margin-left: 30px;
+} */
